installation-guide (20120827) UNRELEASED; urgency=low

  * debian/rules: Fix suite name.
  * preseed: Add authorized_keys url preseed example, thanks Charles Plessy
    for the patch. Closes: #684629.
  * official-cdrom: Add link to CD FaQ. Thanks Holger Wansing and Richard
    Owlett for the heads-up. Closes: #280348, #309568.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200

installation-guide (20120826) unstable; urgency=low

  [ Samuel Thibault ]
  * Reference the French translation of the brltty manual in fr.
  * Disable G-I on kfreebsd-*.
  * Document booting d-i from grub2. Closes: #612165.
  * Mention preseeding as an alternative for accessibility.
  * Document that the text installer is selected by default.
  * Avoid referencing BRLTTY manual chapter precise numbers. Closes: #580508.
  * Make it clear that it's the ISO file which needs to be copied to the USB
    key.
  * Update powerpc's copy of documentation for copying ISO file on USB keys.
  * Add software speech synthesis documentation.
  * Document SCSI partition raise to 255. Closes: Bug#644734. Thanks David
    Prévot.
  * Do not make users think that only "Graphical install" has speakup support,
    and not "64 bit graphical install" too.
  * Mention the 64bit variant installation options.
  * Update chroot manual into using grub2.
  * Document that installing makedev is needed to get MAKEDEV.
    Closes: #620881, #656939.
  * Document the availability of other apt sources, thanks Karl for the
    patch. Closes: Bug#608828.
  * Update xorg, brltty and speakup versions.
  * WPA/WPA2 is now available. Closes: #659648.
  * Use dd of= instead of cat >, to save users who use sudo. Advise to make
    sure the stick is unmounted. Closes: #660776.
  * Rename kbd-chooser component to console-setup.
  * Fix preseeding for keyboard-configuration.
  * Simply use cp instead of dd to prepare USB stick.
  * Remove heading / from pxelinux.0, it seems to pose problem with some