@@ -5,5 +5,13 @@ manual_path="$(echo $basedir | sed "s:/build$::")"
 build_path="$manual_path/build"
 cd $build_path
 
-rm -rf build.out
-rm -rf build.tmp
+if [ -z "$destdir" ]; then
+    destdir="build.out"
+fi
+
+if [ -z "$tempdir" ]; then
+    tempdir="build.tmp"
+fi
+
+rm -rf "$destdir"
+rm -rf "$tempdir"
