@@ -5,6 +5,7 @@ installation-guide (20120827) UNRELEASED; urgency=low
     for the patch. Closes: #684629.
   * official-cdrom: Add link to CD FaQ. Thanks Holger Wansing and Richard
     Owlett for the heads-up. Closes: #280348, #309568.
+  * Add language-parallel build support.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
